Issue #9005: Prevent utctimetuple() from producing year 0 or year 10,000.